[project]
name = "iot-server"
version = "0.1.0"
description = ""
authors = [{ name = "iacobucci", email = "iacobuccivalerio@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
	"fastapi (>=0.115.11,<0.116.0)",
	"uvicorn (>=0.34.0,<0.35.0)",
	"bleak (==0.11.0)",
	"rgbxy @ git+https://github.com/benknight/hue-python-rgb-converter.git@f73a4ec#egg=rgbxy",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
