[project]
name = "iot-server"
version = "0.1.0"
description = ""
authors = [{ name = "iacobucci", email = "iacobuccivalerio@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
	"fastapi (>=0.115.11,<0.116.0)",
	"uvicorn (>=0.34.0,<0.35.0)",
	"paho-mqtt (>=2.1.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
